--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
     <noscript>
       <strong>We're sorry but ji-paper-demo doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
+    <script src="https://canvasjs.com/assets/script/canvasjs.min.js"> </script>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
