--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>ji-paper-demo</title>
+    <title>Demo</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Material+Icons">
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but ji-paper-demo doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>We're sorry but demo doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <script src="https://canvasjs.com/assets/script/canvasjs.min.js"> </script>
     <div id="app"></div>
